[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/unnamed-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=8]
[ext_resource path="res://Sounds/mixkit-game-gun-shot-1662.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 69.5, 189.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 673, 485.625 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 206.5, 120.5 )

[node name="Boss" type="KinematicBody2D"]
position = Vector2( -59, -19 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 181.5, 47.5 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -370, -248 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2( 166, 119 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 143, 50 )
scale = Vector2( 1.39106, 1.39106 )
texture = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 2 )]
position = Vector2( -17, 14 )

[node name="Rotater" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
